--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -415,6 +415,7 @@
   "experiments.details.conditions.payload.text": "Payload",
   "experiments.details.conditions.payload.specific-to-decision-point.text": "Specific to Decision Point",
   "experiments.details.conditions.weight.text": "Weight (%)",
+  "experiments.details.conditions.description.text": "Description",
   "experiments.details.conditions.actions.text": "Actions",
   "experiments.details.conditions.card.no-data-row.text": "No conditions defined. Simple experiments require conditions.",
   "experiments.details.inclusions.card.title.text": "Include Lists",
