--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -419,6 +419,11 @@
   "experiments.details.conditions.actions.text": "Actions",
   "experiments.details.conditions.card.no-data-row.text": "No conditions defined. Simple experiments require conditions.",
   "experiments.upsert-condition-modal.condition-hint.text": "The name of the condition that will be used to identify the variant in your code.",
+  "experiments.details.payloads.card.title.text": "Payloads",
+  "experiments.details.payloads.card.subtitle.text": "Define payloads for this experiment.",
+  "experiments.details.add-payload.button.text": "Add Payload",
+  "experiments.details.import-payload.menu-item.text": "Import Payloads",
+  "experiments.details.export-all-payloads.menu-item.text": "Export All Payloads",
   "experiments.details.inclusions.card.title.text": "Include Lists",
   "experiments.details.inclusions.include-all.toggle.text": "Include All",
   "experiments.details.inclusions.card.subtitle.text": "Define include lists for this experiment.",
