add edit modal to payload card

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -424,12 +424,12 @@
   "experiments.details.add-payload.button.text": "Add Payload",
   "experiments.details.import-payload.menu-item.text": "Import Payloads",
   "experiments.details.export-all-payloads.menu-item.text": "Export All Payloads",
-  "experiments.details.payloads.site.text": "Site",
-  "experiments.details.payloads.target.text": "Target",
+  "experiments.details.payloads.decision-point.text": "Decision Point",
   "experiments.details.payloads.condition.text": "Condition",
   "experiments.details.payloads.payload.text": "Payload",
   "experiments.details.payloads.actions.text": "Actions",
   "experiments.details.payloads.card.no-data-row.text": "No payloads defined.",
+  "experiments.edit-payload-modal.payload-hint.text": "The payload value that will be used by the client application.",
   "experiments.details.inclusions.card.title.text": "Include Lists",
   "experiments.details.inclusions.include-all.toggle.text": "Include All",
   "experiments.details.inclusions.card.subtitle.text": "Define include lists for this experiment.",
