Feature/implement payload section card and table (#2722)
* add payload section card and draft table

* add edit modal to payload card

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -419,6 +419,17 @@
   "experiments.details.conditions.actions.text": "Actions",
   "experiments.details.conditions.card.no-data-row.text": "No conditions defined. Simple experiments require conditions.",
   "experiments.upsert-condition-modal.condition-hint.text": "The name of the condition that will be used to identify the variant in your code.",
+  "experiments.details.payloads.card.title.text": "Payloads",
+  "experiments.details.payloads.card.subtitle.text": "Define payloads for this experiment.",
+  "experiments.details.add-payload.button.text": "Add Payload",
+  "experiments.details.import-payload.menu-item.text": "Import Payloads",
+  "experiments.details.export-all-payloads.menu-item.text": "Export All Payloads",
+  "experiments.details.payloads.decision-point.text": "Decision Point",
+  "experiments.details.payloads.condition.text": "Condition",
+  "experiments.details.payloads.payload.text": "Payload",
+  "experiments.details.payloads.actions.text": "Actions",
+  "experiments.details.payloads.card.no-data-row.text": "No payloads defined.",
+  "experiments.edit-payload-modal.payload-hint.text": "The payload value that will be used by the client application.",
   "experiments.details.inclusions.card.title.text": "Include Lists",
   "experiments.details.inclusions.include-all.toggle.text": "Include All",
   "experiments.details.inclusions.card.subtitle.text": "Define include lists for this experiment.",
